# stremio-webview-reworked

./: .gitignore  .gitmodules  CMakeLists.txt  stremato.rc  vcpkg.json
resources/: extensions.json
resources/discord-rpc-src/: CMakeLists.txt
resources/discord-rpc-src/src/: discord-rpc.cpp
resources/installer/: windows-installer.nsi
resources/portable_config/extensions/: user-js-css-and-js_3.1.2_0.7z
scripts/: build_release.js
src/: main.cpp
src/app/: app_manager.cpp  app_manager.h
src/crashlog/: crashlog.cpp  crashlog.h
src/discord/: discord_manager.cpp  discord_manager.h
src/extensions/: extensions_manager.cpp  extensions_manager.h
src/globals/: globals.cpp  globals.h
src/helpers/: helpers.cpp  helpers.h
src/logger/: logger.cpp  logger.h
src/mpv/: mpv_manager.cpp  mpv_manager.h
src/server/: server_manager.cpp  server_manager.h
src/settings/: settings_manager.cpp  settings_manager.h
src/updater/: updater_manager.cpp  updater_manager.h
src/webview/: webview_manager.cpp  webview_manager.h
src/webview_protocol/: transport_constants.h  types.h
src/webview_protocol/command_handler/: command_handler.cpp  command_handler.h
src/webview_protocol/event_emitter/: event_emitter.cpp  event_emitter.h
src/window/: window_manager.cpp  window_manager.h
versioning/: version-details.json  version.json
